align fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -91,9 +91,9 @@ hr {
 }
 
 #facebook-like {
-	text-align: right;
+	text-align: left;
 	margin-top: 5px;
-	margin-right: 5px;
+	margin-left: 5px;
 }
 
 #info-panel {
